--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,18 @@ addons:
     packages: gcc git wget make libncurses-dev flex bison gperf python
 
 before_script:
+   - pushd ~
    - wget https://dl.espressif.com/dl/xtensa-lx106-elf-linux64-1.22.0-100-ge567ec7-5.2.0.tar.gz
    - tar xvzf xtensa-lx106-elf-linux64-1.22.0-100-ge567ec7-5.2.0.tar.gz
-   - export PATH=PWD/xtensa-lx106-elf/bin:$PATH
+   - export PATH=$PWD/xtensa-lx106-elf/bin:$PATH
    - git clone --recursive --branch release/v3.3 https://github.com/espressif/ESP8266_RTOS_SDK.git
    - cd ESP8266_RTOS_SDK
    - python -m pip install --user -r ./requirements.txt
    - cd ..
    - export IDF_PATH=$PWD/git/ESP8266_RTOS_SDK
+   - popd
 
 language: minimal
 
 script:
-   - make all
+   - make -j2 all
