--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,9 @@ before_script:
 language: minimal
 
 script:
-   - make -j2 all
+   - ls
+   - pwd
+   - echo $IDF_PATH
+   - echo $PATH
+   - ls $IDF_PATH/make
+   - make all
