Try to put code in IRAM but it does not improve Coremark results
- linker fragment to put code and data in iram. Fragment is not used as
commented.
- Increase number of iterations.
- Fix error in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
    - git clone --recursive --branch release/v4.1 https://github.com/espressif/esp-idf.git
    - cd esp-idf
    - ./install.sh
+   - . ./export.sh
    - popd
 
 language: minimal
