Fix travis issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ addons:
     packages: git wget flex bison gperf python3 python3-pip python3-setuptools cmake ninja-build ccache libffi-dev libssl-dev dfu-util
 
 before_script:
-   - sudo apt purge -y python2.7-minimal
+   - update-alternatives --list python
    - sudo update-alternatives --set python /usr/bin/python3
    - pushd ~
    - git clone --recursive https://github.com/espressif/esp-idf.git
