--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ addons:
     packages: git wget flex bison gperf python3 python3-pip python3-setuptools cmake ninja-build ccache libffi-dev libssl-dev dfu-util
 
 before_script:
-   - update-alternatives --install /usr/bin/python python /usr/bin/python3 10
+   - sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
    - pushd ~
    - git clone --recursive https://github.com/espressif/esp-idf.git
    - cd esp-idf
